--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "minesweeper",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
+  "author": "Echo",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "format": "prettier . --write"
+    "format": "prettier . \"!public/**\" --write"
   },
   "dependencies": {
     "@vueuse/components": "^11.2.0",
@@ -20,17 +22,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-file-progress": "^2.1.1",
+    "eslint-plugin-file-progress": "^2.1.2",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.12.2",
