--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-file-progress": "^2.1.2",
@@ -39,5 +40,10 @@
     "typescript-eslint": "^8.12.2",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
